update name of previous "year" dive to "ui_group"

--- a/css/styles.css
+++ b/css/styles.css
@@ -104,7 +104,7 @@ label {
     margin-right: -15px;
 }
 
-#year {
+#ui_group {
     width: 193px;
     padding: 8px 8px 8px 8px;
     background: #1B365D;
