--- a/css/styles.css
+++ b/css/styles.css
@@ -172,19 +172,21 @@ label {
 }
 
 #image-compare {
-    position: fixed;
+   /* position: fixed;*/
     /* Stay in place */
-    padding-top: 50px;
+    /*padding-top: 50px;*/
     /* Location of the box */
-    left: 0;
+    /*left: 0;
     top: 0;
     width: 100%;
     /* Full width */
-    height: 100%;
+    height: 60vh;
     /* Full height */
     overflow: none;
     /* Enable scroll if needed */
     z-index: 2000;
+    margin: auto;
+    display: block;
 }
 
 /* The Close Button */
